[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Player_idle01.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/Camera2D.gd" type="Script" id=4]
[ext_resource path="res://Player/Machine.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.00052, 5.40681 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.29421, 5.72225 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="Position2D"]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="Area2D"]
position = Vector2( -3.71231, -6.8059 )

[node name="Position2D2" type="Position2D" parent="Area2D"]
position = Vector2( 3.97748, -6.98268 )

[node name="Position2D3" type="Position2D" parent="Area2D"]
position = Vector2( 4.24264, 6.98268 )

[node name="Position2D4" type="Position2D" parent="Area2D"]
position = Vector2( -4.06586, 7.07107 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 4 )

[node name="Stats" parent="." instance=ExtResource( 3 )]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -30.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
